# NymeriaGazeTools

./: README.md  pyproject.toml  wiki.md
.github/workflows/: publish_notebooks.yml
downloadScripts/: download_eyegaze.py  download_from_hf.py
examples/: cooking_analysis.html  cooking_analysis.ipynb  individual_gaze_analysis.ipynb  population_gaze_boxplots.html  population_gaze_boxplots.ipynb  preprocessing_example.html  preprocessing_example.ipynb  quick_analysis.html  quick_analysis.ipynb
nymeria_gaze_tools/: __init__.py  analysis.py  events.py  io.py  metrics.py  preprocessing.py  stats.py  viz.py
tests/: README.md  test_io.py  test_metrics.py  test_preprocessing.py
